--- a/templates/static/index.html
+++ b/templates/static/index.html
@@ -5,6 +5,11 @@
     <title>Social Network</title>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<!--
+    <script>
+        let cookieElement = document.cookie["sessionid"];
+
+    </script>-->
 
 
 
@@ -15,6 +20,7 @@
 <div>Hello user</div>
 <div id="app"> </div>
 <script src="/js/main.js"></script>
+<script src="https://unpkg.com/vue-cookies@1.8.4/vue-cookies.js"></script>
 </body>
 
 </html>
